{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "20882c8e-c81d-4902-b71d-a87ef19c58cd",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "558b5f50-0c05-43ae-ae48-ff8d8c40cd4d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "65eae641-df38-47bb-8b3d-f5cc0c824285",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7476efda-7667-4b68-be2a-90924de5aee2",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "78f21164-817e-4074-9400-e9d5f9738442",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "081a7c7c-abda-41dc-84bf-af12480341fe",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "061fac37-6b6d-4400-9ef3-92cbfead3fdc",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "RandomColor",
            "id": "526388ec-74a9-42f7-99f0-da0ec16f2775",
            "actions": [
                {
                    "name": "Randomize",
                    "type": "Button",
                    "id": "0c83ec9c-36f3-4f2e-8b52-21bb04022160",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "61c50a5d-7005-41fe-a1ac-c81543a0598f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ChangeControls",
                    "type": "Button",
                    "id": "aae33953-6a3f-4b38-b877-18157411cc33",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cde3cf09-a10b-46d1-a394-dd4e466c6b84",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Randomize",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "fcf270b8-34c4-4dc2-a5df-d99fc934b221",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c22cd1dd-cc94-4fd3-ac81-a5f2486441ff",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f8d19cb9-7465-44c0-af48-f765eb1e3643",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "fc192094-bb23-448c-a221-1b71741918da",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ef03a294-c3d0-4c90-83ea-33e9b5e78b97",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9c2e7556-749b-4d2a-a685-e16a94349d0a",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeControls",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Driving",
            "id": "c9cd7d3a-bc8e-4dc2-b8e1-eb8cda1e8739",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "ad8a5759-5ec7-48f9-9a6a-741f258b265b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ChangeControls",
                    "type": "Button",
                    "id": "abffd57d-e44f-40b2-b4bf-83778e9d2cbd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "bc765a56-e814-4832-861f-60472d4df5f9",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "3a59ecdb-d3ca-4c96-82eb-1c927413d0ef",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "94feab7b-fc2c-4797-b0b5-a9b400702fda",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "16d21e12-1f75-49d2-86ea-901a8247d9f6",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a77e4144-f371-41cf-aaf0-fb00ba99a928",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ecda4215-0481-4e6c-a45c-7306a1749def",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeControls",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Sphere",
            "id": "49296b1d-28ee-4e59-aaaf-386cf506f3b3",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "4c070f8c-5fe3-4202-9807-7c7e3eec4c4b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ebb3f119-7c34-4e39-9ab3-3e728f2be976",
                    "path": "<Keyboard>/space",
                    "interactions": "Hold(duration=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Slider",
            "id": "75c69c93-9a1f-47a7-9d0c-5dc1815f320d",
            "actions": [
                {
                    "name": "Charge",
                    "type": "Button",
                    "id": "7d98edbb-879f-44e3-b1c8-347629df9980",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ac4dbea4-1a2b-49da-bdeb-e7afa6c276c6",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Charge",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}